test/corpus/if.txt
==================
If true with block
==================

proc :: () { 
  if true {

  }
}

---

(source_file
  (procedure_declaration
    (identifier)
    (procedure
      (parameters)
      (block
        (if_statement
          (boolean)
        )
      )
    )
  )
)
