test/corpus/structs.txt
==================
Struct declaration
==================

Address :: struct {
    street_number: int;
    street_name:   string;
}

---

(source_file
  (struct_declaration
    (identifier)
    (field
      (identifier)
      (type)
    )
    (field
      (identifier)
      (type)
    )
  )
)


==================
Field with default value at declaration
==================

Address :: struct {
    street_number: int = 16;
    street_name: string = "Rue des coquelicots";
}

---

(source_file
  (struct_declaration
    (identifier)
    (field
      (identifier)
      (type)
      (number)
    )
    (field
      (identifier)
      (type)
      (string
        (string_content)
      )
    )
  )
)

==================
Field with default value outside declaration
==================

Address :: struct {
    street_number: int;
    street_number = 16;
    street_name: string;
}

---

(source_file
  (struct_declaration
    (identifier)
    (field
      (identifier)
      (type)
    )
    (default_value_assignment
      (identifier)
      (number)
    )
    (field
      (identifier)
      (type)
    )
  )
)


==================
Struct with constant in it
==================

Address :: struct {
    street_number: int;
    street_name: string;
    BEST_NAME :: "Strite";
}

---

(source_file
  (struct_declaration
    (identifier)
    (field
      (identifier)
      (type)
    )
    (field
      (identifier)
      (type)
    )
    (const_declaration
      (identifier)
      (string
        (string_content)
      )
    )
  )
)


==================
Struct litteral
==================

address := Address.{16, "Rue des coquelicots"};

---

(source_file
  (variable_declaration
    (identifier)
    (struct
      (identifier)
      (struct_field (number))
      (struct_field (string (string_content)))
    )
  )
)

==================
Struct litteral without type
==================

address: Address = .{16, "Rue des coquelicots"};

---

(source_file
  (var_declaration
    (identifier)
    (type (identifier))
    (struct
      (struct_field (number))
      (struct_field (string (string_content)))
    )
  )
)

==================
Struct litteral with named type
==================

address: Address = .{ street_number = 16, street_name = "Rue des coquelicots"};

---

(source_file
  (var_declaration
    (identifier)
    (type (identifier))
    (struct
      (struct_field
        (identifier)
        (number)
      )
      (struct_field
        (identifier)
        (string (string_content))
      )
    )
  )
)
