test/corpus/variables.txt
==================
Uninitialized variable
==================

x: u32;

---

(source_file
  (var_declaration
    (identifier)
    (type
      (identifier)
    )
  )
)

==================
Initialized variable with type
==================

x: u32 = 1;

---

(source_file
  (var_declaration
    (identifier)
    (type
      (identifier)
    )
    (number)
  )
)

==================
Initialized variable without type
==================

x := 1;

---

(source_file
  (variable_declaration
    (identifier)
    (number)
  )
)

==================
Constant variable with type
==================

x: u32 : 1;

---

(source_file
  (var_declaration
    (identifier)
    (type
      (identifier)
    )
    (number)
  )
)

==================
Constant variable without type
==================

x :: 1;

---

(source_file
  (const_declaration
    (identifier)
    (number)
  )
)

==================
Constant string
==================

x :: "hello";

---

(source_file
  (const_declaration
    (identifier)
    (string
      (string_content)
    )
  )
)

==================
Constant boolean
==================

is_real :: true;

---

(source_file
  (const_declaration
    (identifier)
    (boolean)
  )
)

==================
Constant float
==================

PI :: 3.1416

---

(source_file
  (const_declaration
    (identifier)
    (float)
  )
)

==================
Fixed-size array
==================

numbers: [10] int;

---

(source_file
  (var_declaration
    (identifier)
    (type
      (array_type
        (number)
        (type
          (identifier)
        )
      )
    )
  )
)

==================
Dynamic array
==================

numbers: [..] int;

---

(source_file
  (var_declaration
    (identifier)
    (type
      (array_type
        (type
          (identifier)
        )
      )
    )
  )
)

==================
String
==================

text: string;

---

(source_file
  (var_declaration
    (identifier)
    (type
      (identifier)
    )
  )
)

==================
Variable with string litteral
==================

text := "Hello";

---

(source_file
  (variable_declaration
    (identifier)
    (string
      (string_content)
    )
  )
)
